--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -5,8 +5,6 @@
     </head>
 
     <body>
-        {% for n in messaggio %}
-         Il messaggio di jinja è {{ n }}
-        {% endfor %}
+        {{ content | safe }}
     </body>
 </html>
