--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kevin</title>
+        <title>Kevin | {{ path }}</title>
+        <!--  STYLE  -->
+        <link rel="stylesheet" type="text/css" href="style/dark.css">
+        <!--  META  -->
+        <!--  JS  -->
     </head>
-
     <body>
+        <p>ciao primo test</p>
+        <!--  [] blocco []  -->
+        <!--  [] fine blocco[]  -->
     </body>
 </html>
