--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -3,13 +3,15 @@
     <head>
         <title>Kevin | {{ path }}</title>
         <!--  STYLE  -->
-        <link rel="stylesheet" type="text/css" href="style/dark.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/dark.css') }}">
         <!--  META  -->
         <!--  JS  -->
     </head>
     <body>
         <p>ciao primo test</p>
         <!--  [] blocco []  -->
+
+
         <!--  [] fine blocco[]  -->
     </body>
 </html>
