--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <p>ciao primo test</p>
-        <!--  [] blocco []  -->
-        <div id="content">{% block content %}{% endblock %}</div>
-        <!--  [] fine blocco[]  -->
+        <div id="content">
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
 </html>
