--- a/website/application/static/style/style.css
+++ b/website/application/static/style/style.css
@@ -1,4 +1,23 @@
-/*by EnryBarto*/
-body {
-	background-color: #e0f2f1;
+/*by EnryBarto cu cazz*/
+
+/*********  MAIN  ********+*/
+html, body, head {
+	margin: 0;
+	padding: 0;
+	margin-top: 0;
+
+}
+
+a, h1, h2, h3, h4, h5, h6, p {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/*********  TOP MENU  ********+*/
+.top-menu {
+	background-color: #121212;
+}
+
+.top-menu-sx a{
+	text-decoration: none;
+	color: #eee;
 }
