--- a/website/application/templates/home.html
+++ b/website/application/templates/home.html
@@ -1,8 +1,13 @@
 {% extends "layout.html" %}
 {% block title %}Home{% endblock %}
 
-{% block content %}
 
+{% block content %}
+{% if alert %}
+    <script>
+        window.alert("{{ alert }}");
+    </script>
+{% endif %}
 
 
 
