--- a/website/application/templates/home.html
+++ b/website/application/templates/home.html
@@ -1,17 +1,18 @@
 {% extends "layout.html" %}
+
 {% block title %}Home{% endblock %}
 
 
+{% block css %}
+<link type="text/css" href="{{ url_for('static', filename='style/home.css') }}">
+{% endblock %}
+
 {% block content %}
-{% if alert %}
-    <script>
-        window.alert("{{ alert }}");
-    </script>
-{% endif %}
 
-
-
-
-
+    {% if alert %}
+        <script>
+            window.alert("{{ alert }}");
+        </script>
+    {% endif %}
 
 {% endblock %}
