--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -4,7 +4,9 @@
         <title>Kevin | {% block title %}{% endblock %}</title>
         
 		<!--  STYLE  -->
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/style.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+			<!-- da mettere pagina per pagina -->
+			{% block css %}{% endblock %}
 
         <!--  META  -->
         <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
