--- a/graficis/style.css
+++ b/graficis/style.css
@@ -79,7 +79,6 @@ html {
 	margin-top: -6px;
 	overflow: hidden;
 	background-color: #0499cf;
-	border-radius: 0px 0px 8px 8px;
 }
 
 .menu {
@@ -88,7 +87,7 @@ html {
 	left: 0px;
 }
 
-/* buttons in navbar */
+/* Buttons in navbar */
 
 .button {
 	float: left;
@@ -107,10 +106,9 @@ html {
 
 .button a:hover {
 	background-color: #34bdeb;
-	border-radius: 5px;
 }
 
-/* dropdown */
+/* Dropdown */
 
 .dropdown {	
 	float: left;
@@ -124,7 +122,6 @@ html {
 	color: white;
 	padding: 14px 16px;
 	background-color: #0499cf;
-	border-radius: 5px;
 }
 
 .dropdown:hover .ddbutton {
@@ -134,11 +131,9 @@ html {
 .dropdown-content {
 	display: none;
 	position: fixed;
-	background-color: #f9f9f9;
+	background-color: #e1f5ec;
 	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
-	border-radius: 5px;
 }
 
 .dropdown-content a {
@@ -148,19 +143,17 @@ html {
 	text-decoration: none;
 	display: block;
 	text-align: left;
-	border-radius: 5px;
 }
 
 .dropdown-content a:hover {
 	background-color: #b0ddc8;
-	border-radius: 5px;
 }
 
 .dropdown:hover .dropdown-content {
 	display: block;
 }
 
-/* footer */
+/* Footer */
 
 .footer {
 	position: fixed;
