--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -66,11 +66,9 @@ html {
 .dropdown-content {
 	display: none;
 	position: fixed;
-	background-color: #f9f9f9;
+	background-color: #e1f5ec;
 	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
-	border-radius: 5px;
 }
 
 .dropdown-content a {
@@ -80,12 +78,10 @@ html {
 	text-decoration: none;
 	display: block;
 	text-align: left;
-	border-radius: 5px;
 }
 
 .dropdown-content a:hover {
 	background-color: #b0ddc8;
-	border-radius: 5px;
 }
 
 .dropdown:hover .dropdown-content {
