--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -51,10 +51,13 @@
 	</body>
 
 	<footer>
-		<nav class="footer">
-			<div class="footer">
-				<p class="ftext">&ensp;Insert text and buttons here &#128540;</p>
-			</div>
-		</nav>	
+		<nav class="menufooter">
+			<ul class="footer">
+				<li class="fbutton"><a href="#">Home</a></li>
+				<li class="fbutton"><a href="#">News</a></li>
+				<li class="fbutton"><a href="#">Contact</a></li>
+				<li class="fbutton"><a href="#">About</a></li>
+			</ul>
+		</nav>
 	</footer>
 </html>
