--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -21,7 +21,7 @@
 		<meta name="viewport" content="width=device-width">
 		
 		<!--  JS  --> 
-
+		{% block js %}{% endblock %}
 	</head>
 
 	<body class="body">
