--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -12,8 +12,8 @@
     </script>
 {% else %}
     <form method="POST" target="/login">
-        <input type="text" name="user" id="user" required>
-        <input type="password" id="pass" name="pass" required>
+        <input type="text" name="user" id="user" placeholder="Username" required>
+        <input type="password" id="pass" name="pass" placeholder="password" required>
         <button>Submit</button>
     </form>
 {% endif %}
