--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -58,6 +58,7 @@
 				<li class="fbutton"><a href="#">Contact</a></li>
 				<li class="fbutton"><a href="#">About</a></li>
 			</ul>
+			<i class="far fa-arrow-alt-circle-up"></i>
 		</nav>
 	</footer>
 </html>
