--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -42,6 +42,7 @@ html {
 .button a:hover {
 	background-color: #34bdeb;
 	border-radius: 5px;
+	font-weight: bold;
 }
 
 /* dropdown */
@@ -63,6 +64,7 @@ html {
 
 .dropdown:hover .ddbutton {
 	background-color: #34bdeb;
+	font-weight: bold;
 }
 
 .dropdown-content {
@@ -87,6 +89,7 @@ html {
 .dropdown-content a:hover {
 	background-color: #b0ddc8;
 	border-radius: 5px;
+	font-weight: bold;
 }
 
 .dropdown:hover .dropdown-content {
@@ -134,6 +137,25 @@ html {
 }
 
 .fbutton a:hover {
+	background-color: #e7c73f;
+	border-radius: 5px;
+	color: black;
+	font-weight: bold;
+}
+
+/* Arrow Icon */
+
+.fa-arrow-alt-circle-up {
+	position: fixed;
+	bottom: 0;
+	right: 1%;
+	padding: 8.5px;
+	font-size: 30px;
+	color: white;
+}
+
+.fa-arrow-alt-circle-up:hover {
+	color: black;
 	background-color: #e7c73f;
 	border-radius: 5px;
 }
