--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -7,6 +7,7 @@
 
 		<!--  STYLE  -->
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 			<!-- da mettere pagina per pagina -->
 			{% block css %}{% endblock %}
 
@@ -21,6 +22,7 @@
 		<meta name="viewport" content="width=device-width">
 		
 		<!--  JS  --> 
+		<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 		{% block js %}{% endblock %}
 	</head>
 
