Some minor changes

--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -11,8 +11,8 @@
     </script>
 {% else %}
     <form method="POST" action="/login">
-        <input type="text" name="user" id="user" placeholder="Username" required>
-        <input type="password" id="pass" name="pass" placeholder="password" required>
+        <input type="text" name="username" id="username" placeholder="Username" required>
+        <input type="password" name="password" id="password" placeholder="password" required>
         <button>Submit</button>
     </form>
 {% endif %}
