--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% block title %}Login{% endblock %}
 
+{% block css %}
+    <link type="text/css" href="{{ url_for('static', filename='style/login.css') }}" >
+{% endblock %}
+
 {% block content %}
 <p style="display: none;">a</p>
 
