--- a/graficis/style.css
+++ b/graficis/style.css
@@ -62,6 +62,7 @@ html {
 	background-color: #0499cf;
 	border-radius: 5px;
 	font-size: 20px;
+	cursor: pointer;
 }
 
 .dropdown:hover .ddbutton {
@@ -75,7 +76,7 @@ html {
 	background-color: #f9f9f9;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
+	z-index: 1;	
 	border-radius: 5px;
 }
 
