--- a/graficis/login.css
+++ b/graficis/login.css
@@ -15,19 +15,22 @@ html {
 	display: flex;
 	justify-content: center;
  	align-items: center;
-	min-height: 300px;
+ 	height: 400px;
 	align-self: center;
 }
 
 .form {
 	background-color: #34bdeb;
+	height: 300px;
 	border-radius: 5px;	
+	border: 4px solid #016b91;
 }
 
 .eflex {
 	width: 60%;
 	border-radius: 5px;
-	margin: 20px;
+	margin-bottom: 20px;
+	margin-top: 50px;
 	min-height: 30px;
 }
 
