--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -1,29 +1,26 @@
+{% extends "layout.html" %}
 {% block title %}Login{% endblock %}
 
 {% block css %}
-    <link type="text/css" href="{{ url_for('static', filename='style/login.css') }}" >
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/login.css') }}" >
 {% endblock %}
 
 {% block content %}
-<p style="display: none;">a</p>
-
-{% if token %}
-    <script>
-        sessionStorage.setItem("token", "{{ token }}");
-        window.location.href = "/";
-    </script>
-
-{% else %}
-    <span id="title">Kevin | Login</span>
-            <div class="flex">
-                <form class="form" method="POST" action="/login">
-                    <input type="text" name="username" placeholder="Username" required class="eflex">
-                    <input type="password" name="password" placeholder="Password" required class="eflex">
-                    <br><br>
-                    <button class="button">Login!</button>
-                    <br><br>
-                </form>
-            </div>
-{% endif %}
-
+    {% if token %}
+        <script>
+            sessionStorage.setItem("token", "{{ token }}");
+            window.location.href = "/";
+        </script>
+    {% else %}
+        <span id="title">Kevin | Login</span>
+        <div class="flex">
+            <form class="form" method="POST" action="/login">
+                <input type="text" name="username" placeholder="Username" required class="eflex">
+                <input type="password" name="password" placeholder="Password" required class="eflex">
+                <br><br>
+                <button class="button">Login!</button>
+                <br><br>
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
