a new look for login/register

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -14,7 +14,7 @@
 		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti" />
 		<meta name="owner" content="Andreanelli Bartocetti Parri Mariotti" />
 		<meta name="reply-to" content="" />
- 		<meta name="description" content="forum kevin" />
+		<meta name="description" content="forum kevin" />
 		<meta name="keywords" content="kevin forum contenuti" />
 		<meta name="viewport" content="width=device-width">
 		
@@ -43,7 +43,7 @@
 			</nav>
 		{% endif %}
 
-		<div id="content">{% block content %}{% endblock %}</div>
+		<main>{% block content %}{% endblock %}</main>
 
 		{% if footer %}
 			<footer>
