--- a/website/application/static/style/login.css
+++ b/website/application/static/style/login.css
@@ -1,42 +1,46 @@
-html {
-	background-color: #f9fcff;
-	font-family: 'Roboto', sans-serif;
-	padding-bottom: 20vh;
-	text-align: center;
-}
-	
-#title {
-	color: #016b91;
-	font-size: 60px;
-	font-weight: bold;
-}
-
-.flex {
-	display: flex;
+body {
+	margin-top: 3vh;
+	display: grid;
 	justify-content: center;
- 	align-items: center;
- 	height: 400px;
-	align-self: center;
+	text-align: center;
+	background-color: #f9fcff;
 }
 
-.form {
-	background-color: #34bdeb;
-	height: 300px;
-	border-radius: 5px;	
-	border: 4px solid #016b91;
+main {
+	width: max-content;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
-.eflex {
-	width: 60%;
-	border-radius: 5px;
-	margin-bottom: 20px;
-	margin-top: 50px;
-	min-height: 30px;
+#title {
+	margin-bottom: 5vh;
+	font-size: 3em;
+	color: dodgerblue;
 }
 
-.button {font-size: 17px;}
+form {
+	display: flex;
+	flex-direction: column;
+}
 
-.button:hover {
-	font-weight: bold;
-	cursor: pointer;
+input {
+	width: 20vw;
+	height: 4vh;
+	margin: 1vh 0 1vh 0;
+}
+
+button {
+	height: 5vh;
+	margin: 1vh 0 1vh 0;
+	background-color: dodgerblue;
+	border: none;
+	color: white;
+	font-size: 1em;
+}
+
+button:hover {
+	border: 1px solid dodgerblue;
+	color: dodgerblue;
+	background-color: white;
 }
