--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -1,166 +1,102 @@
-html {		
+html, body {
+	height: 100%;
+	margin: 0;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
 	background-color: #f9fcff;
 	font-family: 'Roboto', sans-serif;
-	padding-bottom: 20vh;
 }
-
-/* Navbar */
 
 .navbar {
-	position: fixed;
-	list-style-type: none;
-	padding: 7px;
+	position: sticky;
+	top: 0;
 	width: 100%;
-	margin-top: -6px;
-	overflow: hidden;
+	min-height: 10vh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	font-size: 1.2em;
 	background-color: #0499cf;
-	font-size: 20px;
 }
-
-.menu {
-	position: fixed;
-	top: 6px;	
-	left: 0px;
-}
-
-/* buttons in navbar */
 
 .button {
-	float: left;
-	background-color: #0499cf;
-	color: white;
-	border: none;
+	height: 100%;
+	padding-left: 2vw;
+	padding-right: 2vw;
+	display: flex;
+	align-items: center;
+}
+
+.navbar .button:hover {
+	font-weight: bold;
+	background-color: #34bdeb;
 }
 
 .button a {
-	display: block;
-	color: white;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
-}
-
-.button a:hover {
-	background-color: #34bdeb;
-	border-radius: 5px;
-	font-weight: bold;
-}
-
-/* dropdown */
-
-.dropdown {	
-	float: left;
-	overflow: hidden;
-}
-
-.dropdown .ddbutton {
-	font-size: 16px;  
-	border: none;
-	outline: none;
 	color: white;
-	padding: 14px 16px;
-	background-color: #0499cf;
-	border-radius: 5px;
-	font-size: 20px;
-	cursor: pointer;
 }
 
-.dropdown:hover .ddbutton {
+.navbar .dropdown-content {
+	position: fixed;
+	top: 10vh;
+	width: 10vw;
+	display: none;
+	background-color: #0499cf;
+}
+
+.navbar .dropdown-content a {
+	padding-left: 2vw;
+	padding-top: 1vh;
+	padding-bottom: 1vh;
+	display: block;
+	font-size: .8em;
+	font-weight: 400;
+	text-align: left;
+}
+
+.navbar .dropdown-content a:hover {
 	background-color: #34bdeb;
 	font-weight: bold;
 }
 
-.dropdown-content {
-	display: none;
-	position: fixed;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;	
-	border-radius: 5px;
-}
-
-.dropdown-content a {
-	float: none;
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-	border-radius: 5px;
-}
-
-.dropdown-content a:hover {
-	background-color: #b0ddc8;
-	border-radius: 5px;
-	font-weight: bold;
-}
-
-.dropdown:hover .dropdown-content {
+.navbar .dropdown:hover .dropdown-content {
 	display: block;
 }
 
-/* footer */
-
-.menufooter {
-	position: fixed;
-	left: 0px;
+main {
+	height: min-content;
+	flex-grow: 1;
+	margin: 5vh 5vw 3vh 7vh;
 }
 
 .footer {
-	position: fixed;
-	left: 0;
-	padding: 0;
-	bottom: -16px;
+	position: static;
+	bottom: 0;
 	width: 100%;
+	min-height: 10vh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	font-size: 1.2em;
 	background-color: #e38d30;
-	list-style-type: none;
-	overflow: hidden;
 }
 
-.ftext {
-	color: white;
-	font-weight: bold; 
-}
-
-/* buttons in navbar */
-
-.fbutton {
-	float: left;
-	background-color: #e38d30;
-	color: white;
-	border: none;
-}
-
-.fbutton a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
-
-.fbutton a:hover {
+.footer .button:hover {
 	background-color: #e7c73f;
-	border-radius: 5px;
 	color: black;
-	font-weight: bold;
 }
-
-/* Arrow Icon */
 
 .fa-arrow-alt-circle-up {
-	position: fixed;
-	bottom: 0;
-	right: 1%;
-	padding: 8.5px;
-	font-size: 30px;
-	color: white;
+	font-size: 1.5em;
+	color: white;	
 }
 
 .fa-arrow-alt-circle-up:hover {
-	color: black;
+	border-radius: 20px;
 	background-color: #e7c73f;
-	border-radius: 5px;
-	cursor: pointer;
 }
