--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -49,7 +49,7 @@
 				<span class="button"><a href="#">News</a></span>
 				<span class="button"><a href="#">Contact</a></span>
 				<span class="button"><a href="#">About</a></span>
-				<span class="button"><i class="far fa-arrow-alt-circle-up"></i></span>
+				<span><i class="far fa-arrow-alt-circle-up"></i></span>
 			</nav>
 		{% endif %}
 	</body>
@@ -67,7 +67,6 @@
 				button.style.fontWeight = '700';
 
 				content.style.width = button.offsetWidth + 'px';
-				console.log(button.offsetWidth);
 				content.style.left = button.offsetLeft + 'px';
 
 				button.style.fontWeight = null;
