--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -18,7 +18,7 @@
 			<input type="email" name="email" placeholder="Email" required>
 			<input type="password" name="password" placeholder="Password" required>
 			<input type="password" name="cpassword" placeholder="Confim Password" required>
-			<button>register!</button>
+			<button>Register!</button>
 		</form>
 
 		<script>
