--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -45,7 +45,9 @@
 
 		{% if (footer | default("there", false)) %}
 			<nav class="footer">
-				<span class="button"><a href="#">Home</a></span>
+				<span class="button"><a href="..">Home</a></span>
+				<span class="button" class="ext"><a href="login">Login</a></span>
+				<span class="button" class="ext"><a href="register">Register</a></span>
 				<span class="button"><a href="#">News</a></span>
 				<span class="button"><a href="#">Contact</a></span>
 				<span class="button"><a href="#">About</a></span>
