--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -22,7 +22,6 @@ body {
 	position: sticky;
 	top: 0;
 	width: 100%;
-	min-height: 6vh;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -38,6 +37,8 @@ body {
 	padding-right: 1.5vw;
 	display: grid;
 	align-items: center;
+
+	margin: 2.5vh;
 }
 
 .navbar .button:hover {
@@ -57,7 +58,7 @@ body {
 
 .navbar .dropdown-content {
 	position: fixed;
-	top: 6vh;
+	top: 8vh;
 	display: none;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	background-color: #f9f9f9;
