--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -38,7 +38,7 @@
 						<a href="#">Link 3</a>
 					</div>
 				</span>
-				<a href="login" class="button" id="login"><span>Login</a></span>
+				<a href="login" class="button" id="login"><span style="align-items: right;">Login</a></span>
 				<a href="register" class="button" id="register">Register</a></span>
 			</nav>
 		{% endif %}
