--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -31,7 +31,7 @@ body {
 
 /* Buttons in Navbar */
 
-.button {
+.button {	
 	height: 100%;
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
@@ -56,15 +56,21 @@ body {
 }
 
 #register {
-	position: absolute;
-	right: 0;
-	margin-top: 0;
+	position: fixed;
+	right: 1%;
+	margin: 1.5vh;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
+	height: 10%
 }
 
 #login{
-	position: absolute;
-	right: 8%;
-	margin-top: 0;
+	height: 10%;
+	position: fixed;
+	right: 10%;
+	margin: 1.5vh;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
 }
 
 /* Dropdown */
